made events sectrion, added new team members and alumini and worked on errors

--- a/certificates.html
+++ b/certificates.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="contact.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="certifacites.css" />
-    <title>Document</title>
+    <title>Certificates</title>
   </head>
   <body>
     <header>
@@ -49,30 +49,39 @@
     <div class="wrapper">
       <div class="gallery">
         <div class="image">
+          <p class="c-design">Olx Certificate</p>
           <span><img src="certificates/1.jpg" /></span>
         </div>
         <div class="image">
+          <p class="c-design">Registration Certificate</p>
           <span><img src="certificates/2.jpg" /></span>
         </div>
         <div class="image">
+          <p class="c-design">Understanding Certificate</p>
           <span><img src="certificates/3.jpg" /></span>
         </div>
         <div class="image">
+          <p class="c-design">ASF Foundation</p>
           <span><img src="certificates/4.jpg" /></span>
         </div>
         <div class="image">
+          <p class="c-design">Diamond Partner</p>
           <span><img src="certificates/5.jpg" /></span>
         </div>
         <div class="image">
+          <p class="c-design">Chaudhry estate trophy</p>
           <span><img src="certificates/6.jpg" /></span>
         </div>
         <div class="image">
+          <p class="c-design">Super League 2019</p>
           <span><img src="certificates/7.jpg" /></span>
         </div>
         <div class="image">
+          <p class="c-design">Super League 2022</p>
           <span><img src="certificates/8.jpg" /></span>
         </div>
         <div class="image">
+          <p class="c-design">Zameen Expo 2020</p>
           <span><img src="certificates/9.jpg" /></span>
         </div>
       </div>
