--- a/employes.html
+++ b/employes.html
@@ -107,7 +107,7 @@
 
         <div class="ceo-container">
           <div class="ceo-details">
-            <img src="images/team2.jpg" class="ceo-img" alt="" />
+            <img src="images/team2.jpg" class="md-img" alt="" />
           </div>
           <div class="ceo-words-wrapper">
             <p class="ceo-words">
@@ -128,82 +128,163 @@
       </div>
     </section>
 
-    <!-- -----------------------------------Our Employees------------------------------------------ -->
+    <!-- -----------------------------------Our managnment------------------------------------------ -->
     <section class="popular section" id="popular">
       <div class="container">
         <span class="section__subtitle">Our Staff</span>
-        <h2 class="section__title">Meet our sales team<span>.</span></h2>
-
+        <h2 class="section__title">Management Department <span>.</span></h2>
         <div class="team-container">
-          <div class="team-details">
-            <img src="images/team3.jpg" alt="" class="team-img" />
-            <h3 class="team-name">Chaudhry Sheraz</h3>
-            <p class="team-position">Sales Executive</p>
-          </div>
-
           <div class="team-details">
             <img src="images/team4.jpg" alt="" class="team-img" />
             <h3 class="team-name">Ramaish B. Mana</h3>
-            <p class="team-position">Team Led</p>
+            <p class="team-position">Management</p>
           </div>
 
           <div class="team-details">
-            <img src="images/team6.jpg" alt="" class="team-img" />
-            <h3 class="team-name">Javed Amin Chuhan</h3>
-            <p class="team-position">Senior Specialist</p>
-            <p class="team-position">Rent/Sale</p>
-          </div>
-
-          <div class="team-details">
-            <img src="images/team7.jpg" alt="" class="team-img" />
-            <h3 class="team-name">Asim Anwar Bhatti</h3>
-            <p class="team-position">Sales Specialist</p>
-            <p class="team-position">Sale/Rent</p>
+            <img src="images/team5.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Salman Rasheed</h3>
+            <p class="team-position">Management</p>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- -----------------------------------Our operations------------------------------------------ -->
+    <!-- -----------------------------------Our sale/rent------------------------------------------ -->
     <section class="popular section" id="popular">
       <div class="container">
-        <h2 class="section__title">Meet our operations team<span>.</span></h2>
-
+        <h2 class="section__title">Our Sale/Rent Department<span>.</span></h2>
         <div class="team-container">
           <div class="team-details">
-            <img src="images/team5.jpg" alt="" class="team-img" />
-            <h3 class="team-name">Salman Rasheed</h3>
-            <p class="team-position">Operational Manager</p>
-          </div>
-
-          <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
-            <h3 class="team-name">Chaudhry Shahnawaz</h3>
-            <p class="team-position">Marketing Director & Agent</p>
-          </div>
-
-          <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
-            <h3 class="team-name">Chaudhry Rafique</h3>
-            <p class="team-position">Rent Agents</p>
+            <img src="images/team3.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Chaudhry Sheraz</h3>
+            <p class="team-position">Specialist</p>
+            <p class="team-position">Sale/Rent</p>
           </div>
 
           <div class="team-details">
             <img src="images/face2.jpg" alt="" class="team-img" />
             <h3 class="team-name">Chaudhry Shahzaib</h3>
-            <p class="team-position">Rent Agents</p>
+            <p class="team-position">Rent Specialist</p>
+          </div>
+
+          <div class="team-details">
+            <img src="images/team6.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Javed Amin</h3>
+            <p class="team-position">Specialist</p>
+            <p class="team-position">Sale/Rent</p>
+          </div>
+
+          <div class="team-details">
+            <img src="images/team7.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Asim Anwar Bhatti</h3>
+            <p class="team-position">Specialist</p>
+            <p class="team-position">Sale/Rent</p>
           </div>
 
           <div class="team-details">
             <img src="images/face2.jpg" alt="" class="team-img" />
-            <h3 class="team-name">Chaudhry Zafar</h3>
-            <p class="team-position">Rent Agents</p>
+            <h3 class="team-name">Bankar Jeevan</h3>
+            <p class="team-position">Specialist</p>
+            <p class="team-position">Sale/Rent</p>
           </div>
 
+          <div class="team-details">
+            <img src="images/team10.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Rafique Umer</h3>
+            <p class="team-position">Rent Specialist</p>
+          </div>
+
+          <div class="team-details">
+            <img src="images/team9.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Zafar Chuhan</h3>
+            <p class="team-position">Inventory Manager</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- -----------------------------------Our IT------------------------------------------ -->
+    <section class="popular section" id="popular">
+      <div class="container">
+        <h2 class="section__title">Our Marketing Department<span>.</span></h2>
+
+        <div class="team-container">
+          <div class="team-details">
+            <img src="images/team8.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Chaudhry Shahnawaz</h3>
+            <p class="team-position">Marketing Director</p>
+          </div>
+
+          <div class="team-details">
+            <img src="images/face5.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Hamza Durrani</h3>
+            <p class="team-position">Lead IT Developer</p>
+          </div>
+
+          <div class="team-details">
+            <img src="images/waqar.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Chaudhry Waqar</h3>
+            <p class="team-position">Graphics Designer and SEO</p>
+            <p class="team-position">Social Media Marketer</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- -----------------------------------Our service------------------------------------------ -->
+    <section class="popular section" id="popular">
+      <div class="container">
+        <h2 class="section__title">Meet Our Service Staff<span>.</span></h2>
+
+        <div class="team-container">
           <div class="team-details">
             <img src="images/face2.jpg" alt="" class="team-img" />
             <h3 class="team-name">Muhammad Younis</h3>
-            <p class="team-position">Office Administrator</p>
+            <p class="team-position">Office Boy</p>
+          </div>
+
+          <div class="team-details">
+            <img src="images/team12.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Muhammad Hameed</h3>
+            <p class="team-position">Document Manager</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- -----------------------------------Our Legal------------------------------------------ -->
+    <section class="popular section" id="popular">
+      <div class="container">
+        <h2 class="section__title">Our Legal Department<span>.</span></h2>
+
+        <div class="team-container">
+          <div class="team-details">
+            <img src="images/team11.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Rana Waseem Adv</h3>
+            <p class="team-position">Legal Advisor and Consultant</p>
+          </div>
+
+          <div class="team-details">
+            <img src="images/face2.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Govinda Ram</h3>
+            <p class="team-position">Legal Department</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- -----------------------------------Our Maintenance Department ------------------------------------------ -->
+    <section class="popular section" id="popular">
+      <div class="container">
+        <h2 class="section__title">
+          Our Maintenance Department <span>.</span>
+        </h2>
+
+        <div class="team-container">
+          <div class="team-details">
+            <img src="images/team14.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Ghulam Rasool</h3>
+            <p class="team-position">Maintenance Contractor</p>
           </div>
         </div>
       </div>
@@ -216,13 +297,15 @@
 
         <div class="team-container">
           <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
+            <img src="images/a1.jpg" alt="" class="team-img" />
             <h3 class="team-name">Khizer Abbas</h3>
+            <p class="team-position">Specialist Rent/Sale</p>
           </div>
 
           <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
+            <img src="images/a3.jpg" alt="" class="team-img" />
             <h3 class="team-name">Muhammad Tariq</h3>
+            <p class="team-position">Specialist Rent/Sale</p>
           </div>
 
           <div class="team-details">
@@ -231,23 +314,27 @@
           </div>
 
           <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
+            <img src="images/a2.jpg" alt="" class="team-img" />
             <h3 class="team-name">Altaf Ayub Bhurt</h3>
+            <p class="team-position">Specialist Rent/Sale</p>
           </div>
 
           <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
+            <img src="images/a9.jpg" alt="" class="team-img" />
             <h3 class="team-name">Mohsin Sheikh</h3>
+            <p class="team-position">Specialist Rent/Sale</p>
           </div>
 
           <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
+            <img src="images/a8.jpg" alt="" class="team-img" />
             <h3 class="team-name">Chaudhry Hafeez</h3>
+            <p class="team-position">Specialist Rent/Sale</p>
           </div>
 
           <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
+            <img src="images/a6.jpg" alt="" class="team-img" />
             <h3 class="team-name">Gohar Bhatti</h3>
+            <p class="team-position">Specialist Rent/Sale</p>
           </div>
 
           <div class="team-details">
@@ -261,8 +348,15 @@
           </div>
 
           <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
+            <img src="images/a4.jpg" alt="" class="team-img" />
             <h3 class="team-name">Hammad Zafar</h3>
+            <p class="team-position">Marketing Director</p>
+          </div>
+
+          <div class="team-details">
+            <img src="images/a5.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Muneer Abbas</h3>
+            <p class="team-position">Rent Specialist</p>
           </div>
 
           <div class="team-details">
@@ -286,8 +380,9 @@
           </div>
 
           <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
+            <img src="images/a7.jpg" alt="" class="team-img" />
             <h3 class="team-name">Zain Samejo</h3>
+            <p class="team-position">Office Boy</p>
           </div>
 
           <div class="team-details">
@@ -308,11 +403,6 @@
           <div class="team-details">
             <img src="images/face2.jpg" alt="" class="team-img" />
             <h3 class="team-name">Jamshair</h3>
-          </div>
-
-          <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
-            <h3 class="team-name">Muhammad Younis</h3>
           </div>
 
           <div class="team-details">
