--- a/index.html
+++ b/index.html
@@ -339,6 +339,78 @@
         </div>
       </section>
 
+      <!------------------------------------ Our Events --------------------------------------------->
+      <section class="events section">
+        <div class="container">
+          <div class="events-wrapper">
+            <div class="events-data">
+              <span class="section__subtitle">Our Events</span>
+              <h2 class="events__description">
+                See our upcoming events and events happening around us.
+              </h2>
+            </div>
+            <div class="events-slider">
+              <a
+                href="https://www.facebook.com/100063462114090/posts/pfbid0UjrjWXKh9Mf9vVjUFnosxk56HpqkGFSvHMuShzb8GrbjNRDJY7PrsBeUD87uw1jsl/?app=fbl "
+                class="slider"
+              >
+                <img src="images/event1.jpg" alt="" />
+                <!-- <h2 class="events-details">Launch of cafe12Oclock</h2> -->
+              </a>
+              <a
+                href="https://www.facebook.com/100063462114090/posts/pfbid02Xu171B7aayiQ4NbfPhGQGnADtDiTs6nnw7agCnjPihGxfYQBA7jjd1FH2pxDayv3l/?app=fbl "
+                class="slider"
+              >
+                <img src="images/event2.jpg" alt="" />
+                <!-- <h2 class="events-details">Hello there</h2> -->
+              </a>
+              <a
+                href="https://www.facebook.com/100063462114090/posts/pfbid0Jx5Kk66WPao5WtC6d8MNdYniUTg3NnSwgPkwSu2ePCqH2fngrJ717ERm9crLEGXSl/?app=fbl "
+                class="slider"
+              >
+                <img src="images/event3.jpg" alt="" />
+                <!-- <h2 class="events-details">Hello there</h2> -->
+              </a>
+              <a
+                href="https://www.facebook.com/100063462114090/posts/pfbid02YS8NYArT1gAYGVKncLsEwk1ACBDxaW88rA1VU3z2FoHZCi3FhRrn9vjok4H7Kvo1l/?app=fbl "
+                class="slider"
+              >
+                <img src="images/event4.jpg" alt="" />
+                <!-- <h2 class="events-details">Hello there</h2> -->
+              </a>
+              <a
+                href="https://www.facebook.com/100063462114090/posts/pfbid02ZsZfZmqASxaAwyq5KnKu8KQKsYZ5zzrcvFyAhUPATP5ciNxH3GgEv4ifaTBiUjDcl/?app=fbl "
+                class="slider"
+              >
+                <img src="images/event5.jpg" alt="" />
+                <!-- <h2 class="events-details">Hello there</h2> -->
+              </a>
+              <a
+                href="https://www.facebook.com/100063462114090/posts/pfbid02Ldi2W3vrvGvxdxamV82siBMd4CE8j3wtBYkAdyKeGo3gwh1zaePiSzaZWBkrETAil/?app=fbl "
+                class="slider"
+              >
+                <img src="images/event6.jpg" alt="" />
+                <!-- <h2 class="events-details">Hello there</h2> -->
+              </a>
+              <a
+                href="https://www.facebook.com/100063462114090/posts/pfbid0K72hhULvg6oGXpLustp4EwMzKVqsCNoUvuAoCgJACmbJ91kFAxWUyQ2Ag8p2kgUTl/?app=fbl "
+                class="slider"
+              >
+                <img src="images/event7.jpg" alt="" />
+                <!-- <h2 class="events-details">Hello there</h2> -->
+              </a>
+              <a
+                href="https://www.facebook.com/299636164321889/posts/pfbid0EQfEz231Ki7DrkZaqeXqWy7QF8sxsesPn7c4WojgWyyL3HnZEwFtPe1DU8MoqZYHl/?app=fbl "
+                class="slider"
+              >
+                <img src="images/event8.jpg" alt="" />
+                <!-- <h2 class="events-details">Hello there</h2> -->
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- -----------------------------------contact------------------------------------------ -->
       <section class="contact section" id="contact">
         <div class="contact__container container grid">
