solved some errors

--- a/employes.html
+++ b/employes.html
@@ -137,13 +137,13 @@
           <div class="team-details">
             <img src="images/team4.jpg" alt="" class="team-img" />
             <h3 class="team-name">Ramaish B. Mana</h3>
-            <p class="team-position">Management</p>
+            <p class="team-position">Team Led</p>
           </div>
 
           <div class="team-details">
             <img src="images/team5.jpg" alt="" class="team-img" />
             <h3 class="team-name">Salman Rasheed</h3>
-            <p class="team-position">Management</p>
+            <p class="team-position">Operational Manager</p>
           </div>
         </div>
       </div>
