--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
       <i class="ri-arrow-up-double-line"></i>
     </a>
 
-    <script src="scrollreveal.min.js"></script>
+    <!-- <script src="scrollreveal.min.js"></script> -->
     <script src="swiper-bundle.min.js"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
     <script src="script.js"></script>
