added rent sale booking

--- a/employes.html
+++ b/employes.html
@@ -360,8 +360,9 @@
           </div>
 
           <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
+            <img src="images/a10.jpg" alt="" class="team-img" />
             <h3 class="team-name">Rafaqat Rasheed</h3>
+            <p class="team-position">Rent agent</p>
           </div>
 
           <div class="team-details">
