--- a/index.html
+++ b/index.html
@@ -94,120 +94,175 @@
         </div>
       </div>
 
-      <!-- -----------------------------------Popular------------------------------------------ -->
+      <!-- -----------------------------------sale------------------------------------------ -->
       <section class="popular section" id="popular">
         <div class="container">
-          <span class="section__subtitle">Best choice</span>
-          <h2 class="section__title">Popular Residencies <span>.</span></h2>
+          <span class="section__subtitle">Sale</span>
+          <h2 class="section__title">Properties for Sale<span>.</span></h2>
 
           <div class="popular__container swiper">
             <div class="swiper-wrapper">
               <article class="popular__card swiper-slide">
                 <img src="images/home1.jpg" alt="" class="popular__img" />
-
                 <div class="popular__data">
                   <h2 class="popular__price"><span>PKR</span> 20,000,000</h2>
                   <h3 class="popular__title">Karachi, Bharia housing</h3>
                   <p class="popular__description">
                     5 Bedrooms with open kitchen. Fully furnished, recently
                     painted, and all wooden. Small pool in the garden to give
-                    the house an asthetic look.
+                    the house an asthetic look...
                   </p>
                 </div>
-                <a
-                  href="house-1.html"
-                  target="_blank"
-                  class="button popular__button"
+                <a href="#" target="_blank" class="button popular__button"
                   >View more</a
                 >
               </article>
 
               <article class="popular__card swiper-slide">
                 <img src="images/r1.webp" alt="" class="popular__img" />
-
                 <div class="popular__data">
                   <h2 class="popular__price"><span>PKR</span> 90,000,000</h2>
                   <h3 class="popular__title">Karachi, Bharia housing</h3>
                   <p class="popular__description">
                     5 Bedrooms with open kitchen. Fully furnished, recently
                     painted, and all wooden. Small pool in the garden to give
-                    the house an asthetic look.
+                    the house an asthetic look...
                   </p>
                 </div>
-                <a
-                  href="house-2.html"
-                  target="_blank"
-                  class="button popular__button"
+                <a href="#" target="_blank" class="button popular__button"
                   >View more</a
                 >
               </article>
 
               <article class="popular__card swiper-slide">
                 <img src="images/r2.webp" alt="" class="popular__img" />
-
                 <div class="popular__data">
                   <h2 class="popular__price"><span>PKR</span> 5,000,000</h2>
                   <h3 class="popular__title">Karachi, Bharia housing</h3>
                   <p class="popular__description">
                     5 Bedrooms with open kitchen. Fully furnished, recently
                     painted, and all wooden. Small pool in the garden to give
-                    the house an asthetic look.
-                  </p>
-                </div>
-                <a href="#" class="button popular__button">View more</a>
-              </article>
-
-              <article class="popular__card swiper-slide">
-                <img src="images/r3.webp" alt="" class="popular__img" />
-
-                <div class="popular__data">
-                  <h2 class="popular__price"><span>PKR</span> 80,000,000</h2>
-                  <h3 class="popular__title">Karachi, Bharia housing</h3>
-                  <p class="popular__description">
-                    5 Bedrooms with open kitchen. Fully furnished, recently
-                    painted, and all wooden. Small pool in the garden to give
-                    the house an asthetic look.
-                  </p>
-                </div>
-                <a href="#" class="button popular__button">View more</a>
-              </article>
-
-              <article class="popular__card swiper-slide">
-                <img src="images/r4.webp" alt="" class="popular__img" />
-
-                <div class="popular__data">
-                  <h2 class="popular__price"><span>PKR</span> 30,000,000</h2>
-                  <h3 class="popular__title">Karachi, Bharia housing</h3>
-                  <p class="popular__description">
-                    5 Bedrooms with open kitchen. Fully furnished, recently
-                    painted, and all wooden. Small pool in the garden to give
-                    the house an asthetic look.
-                  </p>
-                </div>
-                <a href="#" class="button popular__button">View more</a>
-              </article>
-
-              <article class="popular__card swiper-slide">
-                <img src="images/r5.jpg" alt="" class="popular__img" />
-
-                <div class="popular__data">
-                  <h2 class="popular__price"><span>PKR</span> 10,000,000</h2>
-                  <h3 class="popular__title">Karachi, Bharia housing</h3>
-                  <p class="popular__description">
-                    5 Bedrooms with open kitchen. Fully furnished, recently
-                    painted, and all wooden. Small pool in the garden to give
-                    the house an asthetic look.
+                    the house an asthetic look...
                   </p>
                 </div>
                 <a href="#" class="button popular__button">View more</a>
               </article>
             </div>
+          </div>
+        </div>
+      </section>
 
-            <div class="swiper-button-next">
-              <i class="ri-arrow-right-s-line"></i>
+      <!-- -----------------------------------rent------------------------------------------ -->
+      <section class="popular section" id="popular">
+        <div class="container">
+          <span class="section__subtitle">Rent</span>
+          <h2 class="section__title">Properties for Rent<span>.</span></h2>
+
+          <div class="popular__container swiper">
+            <div class="swiper-wrapper">
+              <article class="popular__card swiper-slide">
+                <img src="images/home1.jpg" alt="" class="popular__img" />
+                <div class="popular__data">
+                  <h2 class="popular__price"><span>PKR</span> 20,000,000</h2>
+                  <h3 class="popular__title">Karachi, Bharia housing</h3>
+                  <p class="popular__description">
+                    5 Bedrooms with open kitchen. Fully furnished, recently
+                    painted, and all wooden. Small pool in the garden to give
+                    the house an asthetic look...
+                  </p>
+                </div>
+                <a href="#" target="_blank" class="button popular__button"
+                  >View more</a
+                >
+              </article>
+
+              <article class="popular__card swiper-slide">
+                <img src="images/r1.webp" alt="" class="popular__img" />
+                <div class="popular__data">
+                  <h2 class="popular__price"><span>PKR</span> 90,000,000</h2>
+                  <h3 class="popular__title">Karachi, Bharia housing</h3>
+                  <p class="popular__description">
+                    5 Bedrooms with open kitchen. Fully furnished, recently
+                    painted, and all wooden. Small pool in the garden to give
+                    the house an asthetic look...
+                  </p>
+                </div>
+                <a href="#" target="_blank" class="button popular__button"
+                  >View more</a
+                >
+              </article>
+
+              <article class="popular__card swiper-slide">
+                <img src="images/r2.webp" alt="" class="popular__img" />
+                <div class="popular__data">
+                  <h2 class="popular__price"><span>PKR</span> 5,000,000</h2>
+                  <h3 class="popular__title">Karachi, Bharia housing</h3>
+                  <p class="popular__description">
+                    5 Bedrooms with open kitchen. Fully furnished, recently
+                    painted, and all wooden. Small pool in the garden to give
+                    the house an asthetic look...
+                  </p>
+                </div>
+                <a href="#" class="button popular__button">View more</a>
+              </article>
             </div>
-            <div class="swiper-button-prev">
-              <i class="ri-arrow-left-s-line"></i>
+          </div>
+        </div>
+      </section>
+
+      <!-- -----------------------------------Booking------------------------------------------ -->
+      <section class="popular section" id="popular">
+        <div class="container">
+          <span class="section__subtitle">Booking</span>
+          <h2 class="section__title">Projects for booking<span>.</span></h2>
+
+          <div class="popular__container swiper">
+            <div class="swiper-wrapper">
+              <article class="popular__card swiper-slide">
+                <img src="images/home1.jpg" alt="" class="popular__img" />
+                <div class="popular__data">
+                  <h2 class="popular__price"><span>PKR</span> 20,000,000</h2>
+                  <h3 class="popular__title">Karachi, Bharia housing</h3>
+                  <p class="popular__description">
+                    5 Bedrooms with open kitchen. Fully furnished, recently
+                    painted, and all wooden. Small pool in the garden to give
+                    the house an asthetic look...
+                  </p>
+                </div>
+                <a href="#" target="_blank" class="button popular__button"
+                  >View more</a
+                >
+              </article>
+
+              <article class="popular__card swiper-slide">
+                <img src="images/r1.webp" alt="" class="popular__img" />
+                <div class="popular__data">
+                  <h2 class="popular__price"><span>PKR</span> 90,000,000</h2>
+                  <h3 class="popular__title">Karachi, Bharia housing</h3>
+                  <p class="popular__description">
+                    5 Bedrooms with open kitchen. Fully furnished, recently
+                    painted, and all wooden. Small pool in the garden to give
+                    the house an asthetic look...
+                  </p>
+                </div>
+                <a href="#" target="_blank" class="button popular__button"
+                  >View more</a
+                >
+              </article>
+
+              <article class="popular__card swiper-slide">
+                <img src="images/r2.webp" alt="" class="popular__img" />
+                <div class="popular__data">
+                  <h2 class="popular__price"><span>PKR</span> 5,000,000</h2>
+                  <h3 class="popular__title">Karachi, Bharia housing</h3>
+                  <p class="popular__description">
+                    5 Bedrooms with open kitchen. Fully furnished, recently
+                    painted, and all wooden. Small pool in the garden to give
+                    the house an asthetic look...
+                  </p>
+                </div>
+                <a href="#" class="button popular__button">View more</a>
+              </article>
             </div>
           </div>
         </div>
